Fixed the comments https://topjava33hw-w.slack.com/archives/C07PTMLB5QV/p1728911596913629 for the HW02